--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,13 @@
+:root {
+  --primary-color: #d4a373;
+  --section-bg-color: #faedcd;
+  --footer-note-color: #555;
+  ---a-color: #333;
+  --footer-bg-color: #e9edc9;
+  --header-bg-color: #ccd5ae;
+  --body-bg-color: #fefae0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,13 +17,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
-  background-color: #fefae0;
+  background-color: var(--body-bg-color);
   color: #333;
   padding: 20px;
 }
 
 header {
-  background-color: #ccd5ae;
+  background-color: var(--header-bg-color);
   padding: 15px;
   text-align: center;
   border-radius: 8px;
@@ -21,10 +31,8 @@ header {
 }
 
 
-
-
 footer {
-  background-color: #e9edc9;
+  background-color: var(--footer-bg-color);
   padding: 15px;
   text-align: center;
   border-radius: 8px;
@@ -32,13 +40,13 @@ footer {
 }
 
 header a{
-    color: #333;
+    color: var(---a-color);
     text-decoration: none;
     margin: 0 8px;
 }
 
 footer a {
-  color: #333;
+  color: var(--a-color);
   text-decoration: none;
   margin: 0 8px;
 }
@@ -47,17 +55,17 @@ footer a {
 
 .footer-note {
   font-size: 0.9rem;
-  color: #555;
+  color: var(--footer-note-color);
   margin-top: 10px;
 }
 
 h1, h2, h3 {
-  color: #d4a373;
+  color: var(--primary-color);
   margin-bottom: 10px;
 }
 
 section {
-  background-color: #faedcd;
+  background-color: var(--section-bg-color);
   padding: 15px;
   border-radius: 10px;
   margin-bottom: 20px;
