--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,11 @@
 .profile-img {
-  display: block;
+  float: left;
+  display: inline;
   margin: 15px auto;
   border-radius: 12px;
-  border: 3px solid #d4a373;
+  border: 3px solid var(--section-bg-color); 
+  height: 50%;
+  padding: 10px;
 }
 
 .education-list, .language-list {
@@ -42,7 +45,6 @@
   color: #333;
 }
 
-/* ===== SCHEDULE ===== */
 .schedule-table {
   width: 100%;
   border-collapse: collapse;
@@ -59,4 +61,15 @@
 .schedule-table th {
   background-color: #d4a373;
   color: white;
+}
+
+.biografia {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.education{
+  display: block;
+  width: 100%;
 }
